--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "express": "^4.21.2",
     "mongoose": "^8.8.4",
     "nodemon": "^3.1.7",
-    "programming-hero-university-management": "file:../programming-hero-university-management"
+    "programming-hero-university-management": "file:../programming-hero-university-management",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.1",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
